Se ajusta yml y docker

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,12 +4,8 @@ spring:
   r2dbc:
     url: r2dbc:postgresql://localhost:5432/postgres
     username: postgres
-    password: 50LT3ruvQ7D8xSFY6noR
+    password: admin
 
-
-  jpa:
-    hibernate:
-     ddl-auto: none
 
 logging:
   level:
