--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,23 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
+
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+
+	// Mapstrct
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
 	// Dependencias para pruebas
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.powermock:powermock-api-mockito2:2.0.0-RC.4'
+	testImplementation 'org.powermock:powermock-module-junit4:2.0.0-RC.4'
+	testImplementation 'org.mockito:mockito-core:3.12.4'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
